# frankenstein

./: .gitignore  README.md  pyproject.toml  setup.py
benchmarks/: ppo_ant.py  ppo_cartpole.py  ppo_frozenlake.py  ppo_pong.py  ppo_recurrent_bandits.py  ppo_recurrent_frozenlake.py  ppo_recurrent_pong.py  sac_ant.py  sac_recurrent_ant.py  sac_recurrent_but_ff_ant.py  sac_recurrent_halfcheetah.py
benchmarks/buffer/: vec_buffer.py
frankenstein/advantage/: gae.py
frankenstein/algorithms/: trainer.py  utils.py
frankenstein/algorithms/option_critic/: __init__.py  option_critic.py
frankenstein/algorithms/ppo/: trainer.py
frankenstein/algorithms/sac/: trainer.py
frankenstein/buffer/: README.md  __init__.py  history.py  shared.py  vec_history.py  views.py
frankenstein/loss/: policy_gradient.py  state_value.py  value.py
frankenstein/value/: lam.py  monte_carlo.py  n_step.py  v_trace.py
test/advantage/: test_gae.py
test/algorithms/option_critic/: test_expected_state_value.py  test_gather.py  test_termination_loss.py
test/buffer/: test_history_buffer.py  test_vec_history_buffer.py
test/functional/: test_trainer.py
test/loss/: test_clipped_value.py  test_state_value.py
test/loss/policy_gradient/: test_advantage_policy_gradient.py  test_clip.py  test_gae.py
test/unit/algorithms/: test_checkpoint.py
test/unit/buffer/: test_history_buffer.py  test_list_vec_history_buffer.py  test_np_vec_history_buffer.py  test_np_vec_history_buffer_serde.py  test_shared_buffer.py  (+1 more)
test/value/: test_lambda_return.py  test_monte_carlo_return.py  test_n_step_return.py
(+3 files in other folders)
