[project]
name = "frankenstein"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "gymnasium>=1.2.3",
    "jaxtyping>=0.3.9",
    "packaging>=26.0",
    "tabulate>=0.9.0",
    "tensordict>=0.11.0",
    "torch>=2.10.0",
    "typing-extensions>=4.15.0",
]

[dependency-groups]
benchmark = [
    "ale-py>=0.11.2",
    "gymnasium[mujoco]>=1.2.3",
]
dev = [
    "autopep8>=2.3.2",
    "flake8>=7.3.0",
    "numpy>=2.4.2",
    "pdoc>=16.0.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
]

